@@ -19,6 +19,23 @@
 
 #import <Cocoa/Cocoa.h>
 #import "GDataObject.h"
+#import "GDataExtendedProperty.h"
+
+// Calendar Web Content element, inside a <link>, as in
+//
+// <gCal:webContent url="http://www.google.com/logos/july4th06.gif" 
+//                  width="276" height="120" >
+//      <gCal:webContentGadgetPref name="color" value="green" />
+//      <gCal:webContentGadgetPref name="military_time" value="false" />
+// </gCal:webContent>
+//
+// http://code.google.com/apis/gdata/calendar.html#gCalwebContent
+
+@interface GDataWebContentGadgetPref : GDataExtendedProperty
++ (NSString *)extensionElementURI;
++ (NSString *)extensionElementPrefix;
++ (NSString *)extensionElementLocalName;
+@end
 
 @interface GDataWebContent : GDataObject <NSCopying, GDataExtension> {
   NSNumber *height_;
@@ -41,4 +58,12 @@
 - (void)setWidth:(NSNumber *)num;
 - (NSString *)URLString;
 - (void)setURLString:(NSString *)str;
+
+- (NSArray *)gadgetPreferences;
+- (void)setGadgetPreferences:(NSArray *)array;
+- (void)addGadgetPreference:(GDataWebContentGadgetPref *)obj;
+
+// returning a dictionary of prefs simplifies key-value coding access
+- (NSDictionary *)gadgetPreferenceDictionary;
+  
 @end
